--- a/src/app/livros/livrosdetails/livrosdetails.component.html
+++ b/src/app/livros/livrosdetails/livrosdetails.component.html
@@ -1,1 +1,7 @@
-<p>livrosdetails works!</p>
+Titulo
+<input type="text" [(ngModel)]="livro.titulo" />
+
+Autor
+<input type="text" [(ngModel)]="livro.autor" />
+
+<button (click)="salvar()">Salvar</button>
