--- a/src/app/pessoas/pessoasdetails/pessoasdetails.component.html
+++ b/src/app/pessoas/pessoasdetails/pessoasdetails.component.html
@@ -1,1 +1,7 @@
+Nome:
+<input type="text" [(ngModel)]="pessoa.nome" />
 
+Idade:
+<input type="number" [(ngModel)]="pessoa.idade" />
+
+<button (click)="salvar()">Salvar</button>
