--- a/src/app/pessoas/pessoaslist/pessoaslist.component.html
+++ b/src/app/pessoas/pessoaslist/pessoaslist.component.html
@@ -1,18 +1,40 @@
-<table>
-    <thead class="thead-dark">
+<table class="table table-striped table-bordered">
+    <thead>
         <tr>
-            <th scope="col">Nome:</th>
-            <th scope="col">Idade:</th>
+            <th scope="col">Nome</th>
+            <th scope="col">Idade</th>
+            <button (click)="abrirModal(abrir)" type="submit">Novo</button>
         </tr>
     </thead>
     <tbody>
         <tr *ngFor="let pessoa of lista; let i = index">
-            <td *ngIf="pessoa.idade > 30">
+            <td>
                 {{pessoa.nome}}
+                
             </td>
-            <td *ngIf="pessoa.idade > 30">
+            <td >
                 {{pessoa.idade}}
+            </td>
+            <td>
+                <button type="submit">Editar</button>
             </td>
         </tr>
     </tbody>
+    <button routerLink="/admin/livros" type="button">Lista de livros</button>
+    <button routerLink="/admin/carros" type="button">Lista de Carros</button>
 </table>
+<ng-template #abrir let-modal>
+    <div class="modal-header">
+        <h4 class="modal-title">Salvar ou Excluir Pessoas</h4>
+        <button type="button" class="btn-close" aria-label="Close"(click)="modal.dismiss('Cross click')">
+
+        </button>
+    </div>
+    <div class="modal-body">
+        <app-pessoasdetails (retorno)="addNaLista($event)"></app-pessoasdetails>
+
+    </div>
+    <div class="modal-footer">
+        <button type="button" class="btn btn-light"(click)="modal.close('Close click')">Fechar</button>
+    </div>
+</ng-template>
