--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,1 +1,45 @@
-<p>footer works!</p>
+<footer class="text-center text-lg-start bg-dark text-muted">
+    <section class="container">
+      <div class="container text-center text-md-start mt-5">
+        <div class="row mt-3">
+          <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+            <h6 class="text-uppercase fw-bold mb-4">
+              <i class="fas fa-gem me-3 text-secondary"></i>Sobre o Exercicio
+            </h6>
+            <p>
+              Exercicio de fazer funções para cadastrar, inserir, Editar e Alterar
+            </p>
+          </div>
+          <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+            <!-- Links -->
+            <h6 class="text-uppercase fw-bold mb-4">
+              Linguagens
+            </h6>
+            <p>
+              <a class="text-reset">Angular</a>
+            </p>
+            <p>
+              <a class="text-reset">TypeScript</a>
+            </p>
+            <p>
+              <a class="text-reset">SCSS</a>
+            </p>
+          </div>
+          <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+            <h6 class="text-uppercase fw-bold mb-4">Contatos</h6>
+            <p><i class="fas fa-home me-3 text-secondary"></i> Av Maria Bubiak</p>
+            <p>
+              <i class="fas fa-envelope me-3 text-secondary"></i>
+              ademar.ramalho@hotmail.com
+            </p>
+            <p><i class="fas fa-phone me-3 text-secondary"></i>(21)99697-3149</p>
+          </div>
+        </div>
+      </div>
+    </section>
+  
+    <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.025);">
+      © 2023 Copyright:
+      <a class="text-reset fw-bold" href="https://github.com/AdemarRamalho">github.com/AdemarRamalho</a>
+    </div>
+  </footer>
