--- a/src/app/livros/livroslist/livroslist.component.scss
+++ b/src/app/livros/livroslist/livroslist.component.scss
@@ -10,7 +10,9 @@ table {
     text-align: left;
     border-bottom: 2px solid #333;
   }
-  
+  .btn-dark{
+    margin-left: 123%;
+  }
   td {
     padding: 8px;
     border-bottom: 1px solid #ccc; 
