--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,1 +1,19 @@
-<p>header works!</p>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+      <a class="navbar-brand" href="#">Exercicio 3</a>
+      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+        <li class="nav-item active">
+            <button class="nav-link btn btn-secondary  " routerLink="/admin/pessoas" type="button">Lista de pessoas</button>
+        </li>
+        <li class="nav-item">
+            <button class="nav-link btn btn-secondary " routerLink="/admin/carros" type="button">Lista de Carros</button>
+        </li>
+        <li class="nav-item">
+            <button class="nav-link btn btn-secondary " routerLink="/admin/livros" type="button">Lista de livros</button>
+        </li>
+      </ul>
+    </div>
+  </nav>
