--- a/src/app/livros/livroslist/livroslist.component.html
+++ b/src/app/livros/livroslist/livroslist.component.html
@@ -1,9 +1,10 @@
-<table class="table">
-    <thead class="thead-dark">
+<section class="table-responsive">
+<table class="table table-dark table-striped table-bordered">
+    <thead class="table-active">
         <tr>
             <th scope="col">Titulo:</th>
             <th sorted="col">Autor:</th>
-            <button (click)="abriModal(abrir)" type="submit" class="btn btn-dark btn-outline-success">Novo</button>
+            
         </tr>
     </thead>
     <tbody>
@@ -14,12 +15,14 @@
             <td>
                 {{livro.autor}}
             </td>
-
+            <td>
+                <button class="btn btn-warning" type="submit">Editar</button>
+            </td>
         </tr>
+        <button (click)="abriModal(abrir)" type="submit" class="btn btn-lg btn-dark">Novo</button>
     </tbody>
-    <button routerLink="/admin/pessoas" type="button">Lista de pessoas</button>
-    <button routerLink="/admin/carros" type="button">Lista de Carros</button>
 </table>
+</section>
 
 <ng-template #abrir let-modal>
     <div class="modal-header">
