--- a/src/app/pessoas/pessoaslist/pessoaslist.component.html
+++ b/src/app/pessoas/pessoaslist/pessoaslist.component.html
@@ -1,9 +1,9 @@
-<table class="table table-striped table-bordered">
-    <thead>
+<section class="table-responsive">
+<table class="table table-striped table-bordered table-dark">
+    <thead class="table-active">
         <tr>
             <th scope="col">Nome</th>
             <th scope="col">Idade</th>
-            <button (click)="abrirModal(abrir)" type="submit">Novo</button>
         </tr>
     </thead>
     <tbody>
@@ -16,13 +16,14 @@
                 {{pessoa.idade}}
             </td>
             <td>
-                <button type="submit">Editar</button>
+                <button class="btn btn-warning" type="submit">Editar</button>
             </td>
         </tr>
+        <button class="btn btn-dark btn-lg" (click)="abrirModal(abrir)" type="submit">Novo</button>
     </tbody>
-    <button routerLink="/admin/livros" type="button">Lista de livros</button>
-    <button routerLink="/admin/carros" type="button">Lista de Carros</button>
+    
 </table>
+</section>
 <ng-template #abrir let-modal>
     <div class="modal-header">
         <h4 class="modal-title">Salvar ou Excluir Pessoas</h4>
