--- a/src/app/pessoas/pessoaslist/pessoaslist.component.scss
+++ b/src/app/pessoas/pessoaslist/pessoaslist.component.scss
@@ -10,6 +10,9 @@ table {
     text-align: left;
     border-bottom: 2px solid #333;
   }
+  .btn-dark{
+    margin-left: 120%;
+  }
   
   td {
     padding: 8px;
