--- a/src/app/carros/carroslist/carroslist.component.html
+++ b/src/app/carros/carroslist/carroslist.component.html
@@ -36,7 +36,7 @@
 </section>
 <ng-template #abrir let-modal>
     <div class="modal-header">
-        <h4 class="modal-title">Salvar ou Excluir Pessoas</h4>
+        <h4 class="modal-title">Salvar ou Excluir</h4>
         <button type="button" class="btn-close" aria-label="Close"(click)="modal.dismiss('Cross click')">
 
         </button>
