--- a/src/app/livros/livroslist/livroslist.component.html
+++ b/src/app/livros/livroslist/livroslist.component.html
@@ -26,7 +26,7 @@
 
 <ng-template #abrir let-modal>
     <div class="modal-header">
-        <h4 class="modal-title">Salvar ou Excluir Pessoas</h4>
+        <h4 class="modal-title">Salvar ou Excluir</h4>
         <button type="button" class="btn-close" aria-label="Close"(click)="modal.dismiss('Cross click')">
 
         </button>
