--- a/src/app/livros/livroslist/livroslist.component.html
+++ b/src/app/livros/livroslist/livroslist.component.html
@@ -2,8 +2,12 @@
 <table class="table table-dark table-striped table-bordered">
     <thead class="table-active">
         <tr>
-            <th scope="col">Titulo:</th>
-            <th sorted="col">Autor:</th>
+            <th class="titulo" scope="col">Titulo:</th>
+            <th class="autor" sorted="col">Autor:</th>
+            <th class="d-flex Pesquisar">
+                <button class="btn btn-success" (click)="abriModal(abrir)" type="submit">Novo</button>
+                <input type="text" placeholder="Pesquisar">
+            </th>
             
         </tr>
     </thead>
@@ -19,7 +23,6 @@
                 <button class="btn btn-warning" type="submit">Editar</button>
             </td>
         </tr>
-        <button (click)="abriModal(abrir)" type="submit" class="btn btn-lg btn-dark">Novo</button>
     </tbody>
 </table>
 </section>
