--- a/src/app/livros/livroslist/livroslist.component.scss
+++ b/src/app/livros/livroslist/livroslist.component.scss
@@ -1,6 +1,6 @@
 table {
     width: 100%;
-    max-width: 800px; 
+    max-width: 100%; 
     margin: 0 auto;
   
   th {
@@ -10,9 +10,17 @@ table {
     text-align: left;
     border-bottom: 2px solid #333;
   }
-  .btn-dark{
-    margin-left: 123%;
+  .d-flex{
+    justify-content: space-between;
   }
+  .titulo{
+    width: 33%;
+  }
+
+  .autor{
+    width: 33%;
+  }
+
   td {
     padding: 8px;
     border-bottom: 1px solid #ccc; 
