--- a/src/app/pessoas/pessoaslist/pessoaslist.component.html
+++ b/src/app/pessoas/pessoaslist/pessoaslist.component.html
@@ -2,9 +2,14 @@
 <table class="table table-striped table-bordered table-dark">
     <thead class="table-active">
         <tr>
-            <th scope="col">Nome</th>
-            <th scope="col">Idade</th>
+            <th class="nome" scope="col">Nome</th>
+            <th class="idade" scope="col">Idade</th>
+            <th class="d-flex Pesquisar">
+                <button class="btn btn-success" (click)="abrirModal(abrir)" type="submit">Novo</button>
+                <input type="text" placeholder="Pesquisar">
+            </th>
         </tr>
+
     </thead>
     <tbody>
         <tr *ngFor="let pessoa of lista; let i = index">
@@ -19,7 +24,7 @@
                 <button class="btn btn-warning" type="submit">Editar</button>
             </td>
         </tr>
-        <button class="btn btn-dark btn-lg" (click)="abrirModal(abrir)" type="submit">Novo</button>
+
     </tbody>
     
 </table>
