--- a/src/app/pessoas/pessoaslist/pessoaslist.component.scss
+++ b/src/app/pessoas/pessoaslist/pessoaslist.component.scss
@@ -1,21 +1,27 @@
 table {
     width: 100%;
-    max-width: 800px; 
+    max-width: 100%; 
     margin: 0 auto;
   
   th {
     background-color: #f2f2f2; 
     font-weight: bold;
-    padding: 8px;
-    text-align: left;
+    text-align: center;
     border-bottom: 2px solid #333;
   }
-  .btn-dark{
-    margin-left: 120%;
-  }
+.d-flex{
+  justify-content: space-between;
+}
+.nome{
+  width: 33%;
+}
+.idade{
+  width: 33%;
+}
   
   td {
     padding: 8px;
     border-bottom: 1px solid #ccc; 
+    text-align: center;
   }
   }
