--- a/src/app/livros/livroslist/livroslist.component.scss
+++ b/src/app/livros/livroslist/livroslist.component.scss
@@ -7,7 +7,7 @@ table {
     background-color: #f2f2f2; 
     font-weight: bold;
     padding: 8px;
-    text-align: left;
+    text-align: center;
     border-bottom: 2px solid #333;
   }
   .d-flex{
@@ -24,5 +24,6 @@ table {
   td {
     padding: 8px;
     border-bottom: 1px solid #ccc; 
+    text-align: center;
   }
   }
